--- a/task_1/stack.yaml
+++ b/task_1/stack.yaml
@@ -14,7 +14,7 @@ Resources:
         BlockPublicAcls: true
         BlockPublicPolicy: true
         IgnorePublicAcls: true
-        RestrictPublicBuckets: true
+        RestrictPublicBuckets: false
       VersioningConfiguration: 
         Status: Enabled
       WebsiteConfiguration: 
