--- a/task_1/stack.yaml
+++ b/task_1/stack.yaml
@@ -6,7 +6,7 @@ Parameters:
     Type: String
 
 Resources:
-  TestBucket:
+  Task1Bucket:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: !Ref BucketName
@@ -20,10 +20,10 @@ Resources:
       WebsiteConfiguration: 
         IndexDocument: index.html
 
-  TestBucketPolicy:
+  Task1BucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
-      Bucket: !Ref TestBucket
+      Bucket: !Ref Task1Bucket
       PolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -33,12 +33,12 @@ Resources:
             Resource: !Join
               - ''
               - - 'arn:aws:s3:::'
-                - !Ref TestBucket
+                - !Ref Task1Bucket
                 - /*
             Principal: '*'
 
 
-  LambdaExecutionRole:
+  Task1LambdaExecutionRole:
     Type: AWS::IAM::Role
     Properties: 
       AssumeRolePolicyDocument:
@@ -57,16 +57,19 @@ Resources:
                 Action:
                   - s3:GetObject
                 Resource: 
-                  - !Sub 'arn:aws:s3:::${TestBucket}/*'
+                  - !Sub 'arn:aws:s3:::${Task1Bucket}/*'
 
-  TestLambdaFunction:
+  Task1LambdaFunction:
     Type: AWS::Lambda::Function
     Properties:
       FunctionName: !Sub 'update-s3-${AWS::StackName}-${AWS::Region}'
       Handler: index.handler
-      Role: !GetAtt LambdaExecutionRole.Arn
+      Role: !GetAtt Task1LambdaExecutionRole.Arn
       Runtime: python3.12
       Timeout: 5
+      Environment:
+        Variables:
+          BUCKET_NAME: !Ref Task1Bucket
       Code:
         ZipFile: |
           import json
@@ -75,7 +78,7 @@ Resources:
           s3 = boto3.client('s3')
 
           def handler(event, context):
-              bucket_name = '293864207'
+              bucket_name = $BUCKET_NAME
               object_key = 'index.html'
               new_content = "<html><body><h1>Modified by Lambda!</h1></body></html>"
               
@@ -90,15 +93,15 @@ Resources:
     Type: AWS::Lambda::Permission
     Properties:
       Action: lambda:InvokeFunction
-      FunctionName: !GetAtt TestLambdaFunction.Arn
+      FunctionName: !GetAtt Task1LambdaFunction.Arn
       Principal: s3.amazonaws.com
-      SourceArn: !GetAtt TestBucket.Arn
+      SourceArn: !GetAtt Task1Bucket.Arn
 
 Outputs:
   BucketName:
     Description: The name of the S3 bucket
-    Value: !Ref TestBucket
+    Value: !Ref Task1Bucket
 
   LambdaFunctionName:
     Description: The name of the Lambda function
-    Value: !Ref TestLambdaFunction
+    Value: !Ref Task1LambdaFunction
