--- a/task_2/stack.yaml
+++ b/task_2/stack.yaml
@@ -79,10 +79,19 @@ Resources:
               - Effect: Allow
                 Action:
                   - s3:GetObject
-                  - s3:PutObject
                 Resource: 
                   - !Sub 'arn:aws:s3:::${Task2S3Bucket1}/*'
+              - Effect: Allow
+                Action:
+                  - s3:ListBucket
+                Resource: 
+                  - !Sub 'arn:aws:s3:::${Task2S3Bucket1}'
+              - Effect: Allow
+                Action:
+                  - s3:PutObject
+                Resource: 
                   - !Sub 'arn:aws:s3:::${Task2S3Bucket2}/*'
+
 
   Task2CopyLambdaFunction:
     Type: AWS::Lambda::Function
